metadata/force-app/main/default/objects/ccrz__E_OrderItemGroup__c/fields/ccrz__Order__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Order__c</fullName>
    <description>The Order that the Order Item Group is associated with.</description>
    <label>CC Order</label>
    <referenceTo>ccrz__E_Order__c</referenceTo>
    <relationshipLabel>Order Item Groups</relationshipLabel>
    <relationshipName>E_OrderItemGroups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>