metadata/force-app/main/default/objects/ccrz__E_OrderItemGroup__c/fields/ccrz__ShipAmount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShipAmount__c</fullName>
    <description>The shipping subtotal for this item group</description>
    <label>Ship Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>